--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,7 @@
 
 [DevelopmentConfig]
 DEBUG = True
-B2B_PROCESSOR_URL = http://localhost:5002
+REGISTER_URI = http://localhost:5004
 MQ_USERNAME = mquser
 MQ_PASSWORD = mqpassword
 MQ_HOSTNAME = localhost
