--- a/config.ini
+++ b/config.ini
@@ -3,6 +3,7 @@
 [DevelopmentConfig]
 DEBUG = True
 REGISTER_URI = http://localhost:5004
+LEGACY_DB_URI = http://localhost:5007
 MQ_USERNAME = mquser
 MQ_PASSWORD = mqpassword
 MQ_HOSTNAME = localhost
